--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Тестовое для компании Pyrus",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d src"
   },
   "keywords": [],
   "author": "Andrey Filippov",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gh-pages": "3.2.3"
+  }
 }
